# jw-bible-crossref-graph

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  bible_circle.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml  release-please-config.json
.github/workflows/: build.yml  ci.yml  dependabot-automerge.yml  release.yml
i18n/: de.yaml  en.yaml
src/: bible.rs  jwpub.rs  main.rs  render.rs  strings.rs
