[package]
name = "jw-bible-crossref-graph"
version = "0.1.2"
edition = "2021"
description = "Turn a JW Library Study Bible (.jwpub) into a circular cross-reference graphic."
license = "MIT"
repository = "https://github.com/Team-MaRo/jw-bible-crossref-graph"

[[bin]]
name = "jw-bible-crossref-graph"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
fontdb = "0.23.0"
resvg = "0.47.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10.0"
tiny-skia = "0.12.0"
usvg = "0.47.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
